docs: Document Java 25 compatibility limitations
- Updated README to clearly state Java 25 is not currently supported
- Added Java 25 constraint details (Subject.getSubject() removal)
- Updated QUALITY_REPORT to reflect Java version compatibility
- Added explanatory comments in build.sbt about Java 25 limitations
- Recommend Java 17 (LTS) or Java 21 (LTS) for stable operation

Technical background:
- Java 25 removed Subject.getSubject() method
- Apache Spark 3.5.0 uses Hadoop 3.3.4 which depends on this method
- Support expected in Apache Spark 4.0 (release date TBD)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>